--- a/app.yaml
+++ b/app.yaml
@@ -4,8 +4,15 @@ runtime: python
 api_version: 1
 
 handlers:
+- url: /favicon\.ico
+  static_files: static/img/favicon.ico
+  upload: static/img/favicon\.ico
+
 - url: /static
   static_dir: static
+
+- url: /js
+  static_dir: js
 
 - url: /.*
   script: serve.py
