--- a/app.yaml
+++ b/app.yaml
@@ -1,21 +1,20 @@
 application: genomearchitecturelab
-version: 1
-runtime: python
+version: live
+runtime: python27
 api_version: 1
+threadsafe: true
+
+libraries:
+- name: jinja2
+  version: latest
 
 handlers:
 - url: /favicon\.ico
-  static_files: thegrandlocus_theme/static/images/favicon.ico
-  upload: thegrandlocus_theme/static/images/favicon.ico
-
-- url: /thegrandlocus_theme/static
-  static_dir: thegrandlocus_theme/static
+  static_files: static/images/favicon.ico
+  upload: static/images/favicon.ico
 
 - url: /static
   static_dir: static
 
-- url: /js
-  static_dir: js
-
 - url: /.*
-  script: serve.py
+  script: serve.app
